# linkedin_job_matcher

./: .gitignore  PROJECT_DETAILS.md  README.md  app.py  noxfile.py  pyproject.toml  todo.md
config_files/: config.py  raw_json_extract_fields.yml
src/data_processor/: generate_transformed_data.py
src/helper_scripts/: helpers.py
src/job_matcher/: resume_match.py
src/job_scrapper/: job_id_scrapper.py
