[tool.poetry]
name = "linkedin-job-matcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
duckdb = "^1.0.0"
pyarrow = "^16.1.0"
pyyaml = "^6.0.1"


[tool.poetry.group.development.dependencies]
nox = "^2024.4.15"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
